export const snapshot = {};

snapshot[`Instructions > Generate REMOVE Instruction > should generate a REMOVE Instruction if the field is an array of nodes, a rule evaluates to an REMOVE Instruction and no index is defined for the REMOVE position 1`] = `
[
  {
    field: "modifiers",
    index: 0,
    path: "statements[0]",
    type: "REMOVE",
  },
]
`;

snapshot[`Instructions > Generate REMOVE Instruction > should generate a REMOVE Instruction if the field is an array of nodes, a rule evaluates to an REMOVE Instruction and a numerical index is defined for the REMOVE position 1`] = `
[
  {
    field: "modifiers",
    index: 1,
    path: "statements[0]",
    type: "REMOVE",
  },
]
`;

snapshot[`Instructions > Generate REMOVE Instruction > should generate a REMOVE Instruction if the field is an array of nodes, a rule evaluates to an REMOVE Instruction and a string index is evaluated to an integer for the REMOVE position 1`] = `
[
  {
    field: "modifiers",
    index: 0,
    path: "statements[0]",
    type: "REMOVE",
  },
]
`;
